# saphy

./: .gitignore  CMakeLists.txt
include/: constants.hpp  window.hpp
src/: main.cpp  window.cpp
